tests/rosetta/out/Fortran/arbitrary-precision-integers-included-.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program arbitrary_precision_integers_included_
  implicit none
  integer :: e1
  integer :: e2
  type(t_bigint) :: base
  type(t_bigint) :: x
  character(len=100) :: s
  character(len=100) :: s0
    integer :: result
    integer :: b
    integer :: e
  e1 = pow_int(3,2)
  e2 = pow_int(4,e1)
  base = 5
  x = pow_big(base,e2)
  write(s0,'(G0)') x
  s = s0
  print *, '5^(4^(3^2)) has', len(s), 'digits:', s(0+1:20), '...', s((len(s) - 20)+1:len(s))
  
  contains
  recursive integer function pow_int(base,exp) result(res)
    integer, intent(in) :: base
    integer, intent(in) :: exp
    result = 1
    b = base
    e = exp
    do while ((e > 0))
      if ((mod(e,2) == 1)) then
        result = (result * b)
      end if
      b = (b * b)
      e = int(((e / 2)))
    end do
    res = result
    return
  end function pow_int
  recursive type(t_bigint) function pow_big(base,exp) result(res)
    type(t_bigint), intent(in) :: base
    integer, intent(in) :: exp
    result = 1
    b = base
    e = exp
    do while ((e > 0))
      if ((mod(e,2) == 1)) then
        result = (result * b)
      end if
      b = (b * b)
      e = int(((e / 2)))
    end do
    res = result
    return
  end function pow_big
end program arbitrary_precision_integers_included_
